--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <!-- Menu de navegacion -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary menu">
             <div class="container-fluid" id="menu">
-                <a class="navbar-brand img-logo" href="./index.html"><img src="./recursosEntraga3/cookie-de-nutella.png"
-                        width="120px" alt=""></a>
+                <a class="navbar-brand img-logo" href="./index.html"><img src="https://i.ibb.co/w4Kfm4D/cookie-de-nutella.png" alt="cookie-de-nutella" width="120px" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -54,8 +53,7 @@
                     <h1 class="texto-1 gradient-text">¿Por qué viajar a NY<br>si nuestras galletas<br>están aquí?</h1>
                 </div>
                 <div class="col">
-                    <img src="./recursosEntraga3/MART_beautiful_cookie_website_purple_background_colorful_mimali_87da3c67-a3ae-4575-ba8f-4f3eadae01a2__1_-removebg.png"
-                        width="550px" alt="Cookie splash">
+                    <img src="https://i.ibb.co/phRTqNx/MART-beautiful-cookie-website-purple-background-colorful-mimali-87da3c67-a3ae-4575-ba8f-4f3eadae01a2.png" alt="MART-beautiful-cookie-website-purple-background-colorful-mimali-87da3c67-a3ae-4575-ba8f-4f3eadae01a2" width="550px" alt="Cookie splash">
                 </div>
             </div>
         </div>
@@ -66,8 +64,7 @@
             <div class="row align-items-center">
                 <div class="col galleta-cute">
                     <img class="img-seccion-1"
-                        src="./recursosEntraga3/MART_cute_chocolate_chip_cookie__purple_background_andrew_hicki_684295e4-ce32-4ec4-9190-a35ae3cd5b67-removebg-preview.png"
-                        alt="Cute Cookie" width="400px">
+                        href="https://imgbb.com/"><img src="https://i.ibb.co/z6TC3h1/MART-cute-chocolate-chip-cookie-purple-background-andrew-hicki-684295e4-ce32-4ec4-9190-a35ae3cd5b67.png" alt="MART-cute-chocolate-chip-cookie-purple-background-andrew-hicki-684295e4-ce32-4ec4-9190-a35ae3cd5b67" alt="Cute Cookie" width="400px">
                 </div>
                 <div class="col">
                     <h2 class="texto-2 w-60">Nuestras galletas se hacen de manera artesanal, nos preocupamos de usar
@@ -85,19 +82,19 @@
                 <div class="row seccion-2-flex">
                     <div class="col cookie-truck">
                         <img class="sub-banner-grid "
-                            src="./recursosEntraga3/MART_delivery_truck_icon_illustration_for_children_purple_backg_a22450e6-eaa0-4ddf-8013-fef7498c7d5c.png"
+                            src="https://i.ibb.co/pXV46jC/MART-delivery-truck-icon-illustration-for-children-purple-backg-a22450e6-eaa0-4ddf-8013-fef7498c7d5c.png"
                             width="80px" alt="cookie truck">
                         <h2>Sigue nuestro <span class="cookie-truck">Cookie Truck</span></h2>
                     </div>
                     <div class="col cookie-truck">
                         <img class="sub-banner-grid"
-                            src="./recursosEntraga3/MART_chef_hat_icon_illustration_for_children_with_yellow_backgr_7f0e7cad-1f28-449c-8db3-264975c60cf0.png"
+                            src="https://i.ibb.co/6NWDvnW/MART-chef-hat-icon-illustration-for-children-with-yellow-backgr-7f0e7cad-1f28-449c-8db3-264975c60cf0.png"
                             width="80px" alt="Chef hat">
                         <h2> Horneamos <span class="cookie-truck">todos</span> los días</h2>
                     </div>
                     <div class="col cookie-truck">
                         <img class="sub-banner-grid"
-                            src="./recursosEntraga3/MART_ecommerce_computer_icon_illustration_for_children_with_pur_5b0f3f79-28ae-45fa-a9d7-e5cee91c1ee5.png"
+                            src="https://i.ibb.co/S0DXNhQ/MART-ecommerce-computer-icon-illustration-for-children-with-pur-5b0f3f79-28ae-45fa-a9d7-e5cee91c1ee5.png"
                             width="20vw" alt="Ecommerce">
                         <h2>Compras <span class="cookie-truck">100% </span>Online</h2>
                     </div>
@@ -115,7 +112,7 @@
                     </div>
                     <div class="col cookie-con-lentes">
                         <img class="animate__animate__wobble"
-                            src="./recursosEntraga3/MART_excited_cookie_illustration-removebg-preview.png" width="500px"
+                            src="https://i.ibb.co/h7GFrKL/MART-excited-cookie-illustration-removebg-preview.png" width="500px"
                             alt="Cookie con lentes">
 
                     </div>
@@ -146,7 +143,7 @@
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <img class="img-logo-footer"
-                        src="./recursosEntraga3/cashew_confetti_gif_grande-removebg-preview (1).png" width="250px"
+                        src="https://i.ibb.co/crFzy0X/cashew-confetti-gif-grande-removebg-preview-1.png" width="250px"
                         alt="">
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
