--- a/sections/galletas.html
+++ b/sections/galletas.html
@@ -56,7 +56,7 @@
             <div class="wrapper-grid wrapper-grid-galletas">
 
                 <div class="container container-galletas">
-                    <img src="../recursosEntraga3/09212020_PDP-OVERHAUL5148_4e5a1e.webp" alt="Galleta de Chocolate"
+                    <img src="https://i.ibb.co/55wZzGd/09212020-PDP-OVERHAUL5148-4e5a1e.webp" alt="Galleta de Chocolate"
                         class="cookie-product">
                     <h1 class="name">Confetti Cookie</h1>
                     <p class="description">Galleta hecha con cariño y amor</p>
@@ -65,7 +65,7 @@
 
 
                 <div class="container container-galletas">
-                    <img src="..//recursosEntraga3/09212020_PDP-OVERHAUL5195_48b25e.webp" alt="Galleta de Chocolate"
+                    <img src="https://i.ibb.co/HzcrVm4/09212020-PDP-OVERHAUL5195-48b25e.webp" alt="Galleta de Chocolate"
                         class="cookie-product">
                     <h1 class="name">Butternaut Cookie</h1>
                     <p class="description">Galleta hecha con cariño y amor</p>
@@ -74,21 +74,21 @@
 
 
                 <div class="container container-galletas">
-                    <img src="..//recursosEntraga3/cookie-brown-grid.png" alt="Galleta de Chocolate" class="cookie-product">
+                    <img src="https://i.ibb.co/wwnq8HV/cookie-brown-grid.png" alt="Galleta de Chocolate" class="cookie-product">
                     <h1 class="name">ChocoPrinkles Cookie</h1>
                     <p class="description">Galleta hecha con cariño y amor</p>
                     <button class="btn">Comprar</button>
                 </div>
 
                 <div class="container container-galletas">
-                    <img src="..//recursosEntraga3/corn-cookie-grid.png" alt="Galleta de Chocolate" class="cookie-product">
+                    <img src="https://i.ibb.co/y0sp0qQ/corn-cookie-grid.png" alt="corn-cookie-grid" alt="Galleta de Chocolate" class="cookie-product">
                     <h1 class="name">Corn Cookie🌽</h1>
                     <p class="description">Galleta hecha con cariño y amor</p>
                     <button class="btn">Comprar</button>
                 </div>
 
                 <div class="container container-galletas">
-                    <img src="..//recursosEntraga3/Cornflake_Cookie-grid.png" alt="Galleta de Chocolate"
+                    <img src="https://i.ibb.co/dQcpDMH/Cornflake-Cookie-grid.png" alt="Galleta de Chocolate"
                         class="cookie-product">
                     <h1 class="name">CornFlakes Cookie</h1>
                     <p class="description">Galleta hecha con cariño y amor</p>
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="container container-galletas">
-                    <img src="..//recursosEntraga3/09212020_PDP-OVERHAUL6032.webp" alt="Galleta de Chocolate"
+                    <img src="https://i.ibb.co/MRx0ZRQ/09212020-PDP-OVERHAUL6032.webp"  alt="Galleta de Chocolate"
                         class="cookie-product">
                     <h1 class="name">Cookie Pie</h1>
                     <p class="description">Galleta hecha con cariño y amor</p>
@@ -128,7 +128,7 @@
                     </ul>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
-                    <img class="img-logo-footer" src="..//recursosEntraga3/cashew_confetti_gif_grande-removebg-preview (1).png" width="250px" alt="">
+                    <img class="img-logo-footer" src="https://i.ibb.co/crFzy0X/cashew-confetti-gif-grande-removebg-preview-1.png" width="250px" alt="">
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <img src="..//recursosEntraga3/shot_230122_210313-removebg-preview (1).png" width="150px" alt="">
