--- a/sections/tiendas.html
+++ b/sections/tiendas.html
@@ -95,7 +95,7 @@
           </ul>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-3">
-          <img class="img-logo-footer" src="..//recursosEntraga3/cashew_confetti_gif_grande-removebg-preview (1).png" width="250px" alt="">
+          <img class="img-logo-footer" src="https://i.ibb.co/crFzy0X/cashew-confetti-gif-grande-removebg-preview-1.png" width="250px" alt="">
         </div>
         <div class="col-xs-12 col-md-6 col-lg-3">
           <img src="..//recursosEntraga3/shot_230122_210313-removebg-preview (1).png" width="150px" alt="">
