--- a/sections/nosotros.html
+++ b/sections/nosotros.html
@@ -44,7 +44,7 @@
     <main>
         <section class="about-us">
           <div class="principal">
-            <img src="../recursosEntraga3/yomyom.gif" alt="">
+            <img src="https://i.ibb.co/K03JRH8/yomyom.gif" alt="">
             <div class="about-text">
               <h1>Somos <span class="gradient-about">Cookie Shop</span></h1>
               <h5>Las galletas <span class="cursive-about">New York Style</span> más ricas de Santiago</h5>
@@ -77,7 +77,7 @@
                     </ul>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
-                    <img class="img-logo-footer" src="..//recursosEntraga3/cashew_confetti_gif_grande-removebg-preview (1).png" width="250px" alt="">
+                    <img class="img-logo-footer" src="https://i.ibb.co/crFzy0X/cashew-confetti-gif-grande-removebg-preview-1.png" width="250px" alt="">
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <img src="..//recursosEntraga3/shot_230122_210313-removebg-preview (1).png" width="150px" alt="">
