cambie banner principal

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <!-- Menu de navegacion -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary menu">
             <div class="container-fluid" id="menu">
-                <a class="navbar-brand img-logo" href="./index.html"><img src="https://i.ibb.co/w4Kfm4D/cookie-de-nutella.png" alt="cookie-de-nutella" width="120px" alt=""></a>
+                <a class="navbar-brand img-logo" href="./index.html"><img
+                        src="https://i.ibb.co/w4Kfm4D/cookie-de-nutella.png" alt="cookie-de-nutella" width="120px"
+                        alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -47,24 +49,42 @@
     </header>
     <main>
         <!-- Banner Principal -->
-        <div class="container text-center" id="banner-home">
+        <!-- <div class="container text-center" id="banner-home">
             <div class="row align-items-center banner-principal-flex">
                 <div class="col">
                     <h1 class="texto-1 gradient-text">¿Por qué viajar a NY<br>si nuestras galletas<br>están aquí?</h1>
                 </div>
                 <div class="col">
-                    <img src="https://i.ibb.co/phRTqNx/MART-beautiful-cookie-website-purple-background-colorful-mimali-87da3c67-a3ae-4575-ba8f-4f3eadae01a2.png" alt="MART-beautiful-cookie-website-purple-background-colorful-mimali-87da3c67-a3ae-4575-ba8f-4f3eadae01a2" width="550px" alt="Cookie splash">
+                    <img src="https://i.ibb.co/tq3ZVG2/Whats-App-Image-2023-02-22-at-7-41-33-PM.jpg" width="550px" alt="Cookie splash">
+                </div>
+            </div>
+        </div> -->
+
+        <div class="banner-principal">
+            <div class="right-banner-principal">
+                <h2>Nuestras Galletas están aquí (;</h2>
+                <h1 class="titulo-banner-principal">No viajes a New York</h1>
+                <h3>Envío gratis en Almería y 30% dcto. en toda España</h3>
+                <button class="button-principal">Ver todas las galletas</button>
+            </div>
+            <div class="left-banner-principal">
+                <div class="img-banner-principal">
+                    <img src="https://cdn.shopify.com/s/files/1/0034/7550/5225/files/vdayhomepagehero.jpg?format=pjpg&v=1673538102&width=1944"
+                        alt="" width="500px">
                 </div>
             </div>
         </div>
+
 
         <!----------------- Seccion 1 ------------------>
 
         <div class="container text-center col-sm grid-main-container">
             <div class="row align-items-center">
                 <div class="col galleta-cute">
-                    <img class="img-seccion-1"
-                        href="https://imgbb.com/"><img src="https://i.ibb.co/z6TC3h1/MART-cute-chocolate-chip-cookie-purple-background-andrew-hicki-684295e4-ce32-4ec4-9190-a35ae3cd5b67.png" alt="MART-cute-chocolate-chip-cookie-purple-background-andrew-hicki-684295e4-ce32-4ec4-9190-a35ae3cd5b67" alt="Cute Cookie" width="400px">
+                    <img class="img-seccion-1" href="https://imgbb.com/"><img
+                        src="https://i.ibb.co/z6TC3h1/MART-cute-chocolate-chip-cookie-purple-background-andrew-hicki-684295e4-ce32-4ec4-9190-a35ae3cd5b67.png"
+                        alt="MART-cute-chocolate-chip-cookie-purple-background-andrew-hicki-684295e4-ce32-4ec4-9190-a35ae3cd5b67"
+                        alt="Cute Cookie" width="400px">
                 </div>
                 <div class="col">
                     <h2 class="texto-2 w-60">Nuestras galletas se hacen de manera artesanal, nos preocupamos de usar
@@ -112,8 +132,8 @@
                     </div>
                     <div class="col cookie-con-lentes">
                         <img class="animate__animate__wobble"
-                            src="https://i.ibb.co/h7GFrKL/MART-excited-cookie-illustration-removebg-preview.png" width="500px"
-                            alt="Cookie con lentes">
+                            src="https://i.ibb.co/h7GFrKL/MART-excited-cookie-illustration-removebg-preview.png"
+                            width="500px" alt="Cookie con lentes">
 
                     </div>
                 </div>
@@ -143,7 +163,7 @@
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <img class="img-logo-footer"
-                        src="https://i.ibb.co/crFzy0X/cashew-confetti-gif-grande-removebg-preview-1.png" width="250px"
+                        src="./recursosEntraga3/cashew_confetti_gif_grande-removebg-preview (1).png" width="250px"
                         alt="">
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
