--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -85,7 +85,7 @@
                 </form>
             </div>
             <div class="login-right">
-                <img src="../recursosEntraga3/chocolate-bar-gif.webp" alt="">
+                <img class="contacto-img" src="https://images.squarespace-cdn.com/content/v1/5f230415528b5d74fb6acbcc/1601421273785-4R8LQ9ETPWI87H9MM9BA/Flour-and-Branch-The-Salty-Sombitch-Thumbnail-Top.gif?format=1000w" alt="">
             </div>
         </div>
     </main>
