--- a/sections/nosotros.html
+++ b/sections/nosotros.html
@@ -44,7 +44,7 @@
     <main>
         <section class="about-us">
           <div class="principal">
-            <img src="https://i.ibb.co/K03JRH8/yomyom.gif" alt="">
+            <img src="https://tinygif.com/images/2023/02/22/yomyom.gif" alt="">
             <div class="about-text">
               <h1>Somos <span class="gradient-about">Cookie Shop</span></h1>
               <h5>Las galletas <span class="cursive-about">New York Style</span> más ricas de Santiago</h5>
