--- a/index.html
+++ b/index.html
@@ -75,29 +75,45 @@
             </div>
         </div>
 
+        <!------------------- Marquee -------------------->
+
+        <div class="marquee">
+            <ul class="marquee-content">
+                <li>&nbspGalletas New York Style en tu hogar.&nbsp</li>
+                <li>&nbsp30% de Dcto en España.&nbsp</li>
+                <li>&nbspRecién horneadas Siempre.&nbsp</li>
+                <li>&nbspGalletas New York Style en tu hogar.&nbsp</li>
+                <li>&nbsp30% de Dcto en España.&nbsp</li>
+                <li>&nbspRecién horneadas Siempre.&nbsp</li>
+            </ul>
+            <!-- Mirrors the content above -->
+            <ul class="marquee-content" aria-hidden="true">
+                <li>&nbspGalletas New York Style en tu hogar.&nbsp</li>
+                <li>&nbsp30% de Dcto en España.&nbsp</li>
+                <li>&nbspRecién horneadas Siempre.&nbsp</li>
+                <li>&nbspGalletas New York Style en tu hogar.&nbsp</li>
+                <li>&nbsp30% de Dcto en España.&nbsp</li>
+                <li>&nbspRecién horneadas Siempre.&nbsp</li>
+        </div>
 
         <!----------------- Seccion 1 ------------------>
 
+
+        <div class="seccion-1-texto">
+            <h1>Nuestras galletas son <span class="seccion-1-texto-cursive">artesanales.</span> </h1>
+
+            <h2>Nos preocupamos de usar las mejores materias primas. Usamos sólo chocolate belga para todas nuestras
+                líneas de <span class="gradient-text-2">brownies y blondies, Belcolade y
+                    Valrhona.</span>
+            </h2>
+        </div>
+
+        <img class="cute-cookie"
+            src="https://i.ibb.co/z6TC3h1/MART-cute-chocolate-chip-cookie-purple-background-andrew-hicki-684295e4-ce32-4ec4-9190-a35ae3cd5b67.png"
+            alt="MART-cute-chocolate-chip-cookie-purple-background-andrew-hicki-684295e4-ce32-4ec4-9190-a35ae3cd5b67"
+            border="0" width="350px" />
+        <!----------------- Seccion 2 ------------------>
         <div class="container text-center col-sm grid-main-container">
-            <div class="row align-items-center">
-                <div class="col galleta-cute">
-                    <img class="img-seccion-1" href="https://imgbb.com/"><img
-                        src="https://i.ibb.co/z6TC3h1/MART-cute-chocolate-chip-cookie-purple-background-andrew-hicki-684295e4-ce32-4ec4-9190-a35ae3cd5b67.png"
-                        alt="MART-cute-chocolate-chip-cookie-purple-background-andrew-hicki-684295e4-ce32-4ec4-9190-a35ae3cd5b67"
-                        alt="Cute Cookie" width="400px">
-                </div>
-                <div class="col">
-                    <h2 class="texto-2 w-60">Nuestras galletas se hacen de manera artesanal, nos preocupamos de usar
-                        las mejores
-                        materias primas, sobre todo el chocolate, que es el ingrediente principal. Usamos sólo
-                        chocolate belga
-                        para todas nuestras líneas de <span class="gradient-text-2">brownies y blondies, Belcolade y
-                            Valrhona.</span></h2>
-                </div>
-            </div>
-
-            <!----------------- Seccion 2 ------------------>
-
             <div class="container text-center">
                 <div class="row seccion-2-flex">
                     <div class="col cookie-truck">
@@ -124,14 +140,14 @@
             <!----------------- Seccion 3 ------------------>
 
 
-            <div class="container text-center" id="banner-home">
-                <div class="row align-items-center img-seccion-3">
+            <div class="container text-center img-seccion-3" id="banner-home">
+                <div class="row align-items-center">
                     <div class="col button-1">
                         <button>¡Quiero galletas!</button>
                         <a href="./secciones/galletas.html"></a>
                     </div>
                     <div class="col cookie-con-lentes">
-                        <img class="animate__animate__wobble"
+                        <img class="animate__animate__wobble cookie-con-lentes"
                             src="https://i.ibb.co/h7GFrKL/MART-excited-cookie-illustration-removebg-preview.png"
                             width="500px" alt="Cookie con lentes">
 
