--- a/sections/tiendas.html
+++ b/sections/tiendas.html
@@ -47,7 +47,7 @@
       <div class="col-container-us">
         <h1>Visítanos en <span class="gradient-text-tienda">nuestras tiendas</span>, te estamos esperando🍪</h1>
         <h3>Nuestras gaelletas siempre están recién hechas</h3>
-        <button type="button">Ir a las galletas</button>
+        <button class="button-tiendas" type="button">Ir a las galletas</button>
       </div>
       <div class="col-container-us">
         <div class="card-tienda card-tienda-1">
