--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/style.css">
     <title>CookieShop</title>
+    <link rel="icon" type="image/x-icon" href="./recursosEntraga3/16508127701581534995.svg">
 </head>
 
 <body>
