terminé proyecto final

--- a/sections/galletas.html
+++ b/sections/galletas.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="chocolate chip cookie, corn cookie, new york style cookie">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Galletas deliciosas, especiales y únicas que no podrás parar de probar">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="..//css/style.css">
-    <title>Galletas</title>
+    <title>Galletas | Cookie Shop</title>
+    <link rel="icon" type="image/x-icon" href="..//recursosEntraga3/16508127701581534995.svg">
 </head>
 
 <body>
@@ -47,7 +50,7 @@
             <div class="texto-cookie-flex">
                 <h2>¿Alguna vez te has preguntado...</h2>
                 <h3>qué tienen en común Carrie de Sex and the City, Rachel de Friends y nuestras galletas?</h3>
-                <h2>Todas son newyorkers (;</h2>
+                <h1>Todas son newyorkers (;</h1>
             </div>
 
         </div>
@@ -58,7 +61,7 @@
                 <div class="container container-galletas">
                     <img src="https://i.ibb.co/55wZzGd/09212020-PDP-OVERHAUL5148-4e5a1e.webp" alt="Galleta de Chocolate"
                         class="cookie-product">
-                    <h1 class="name">Confetti Cookie</h1>
+                    <h2 class="name">Confetti Cookie</h2>
                     <p class="description">Galleta hecha con cariño y amor</p>
                     <button class="btn">Comprar</button>
                 </div>
@@ -67,7 +70,7 @@
                 <div class="container container-galletas">
                     <img src="https://i.ibb.co/HzcrVm4/09212020-PDP-OVERHAUL5195-48b25e.webp" alt="Galleta de Chocolate"
                         class="cookie-product">
-                    <h1 class="name">Butternaut Cookie</h1>
+                    <h2 class="name">Butternaut Cookie</h2>
                     <p class="description">Galleta hecha con cariño y amor</p>
                     <button class="btn">Comprar</button>
                 </div>
@@ -75,14 +78,14 @@
 
                 <div class="container container-galletas">
                     <img src="https://i.ibb.co/wwnq8HV/cookie-brown-grid.png" alt="Galleta de Chocolate" class="cookie-product">
-                    <h1 class="name">ChocoPrinkles Cookie</h1>
+                    <h2 class="name">ChocoPrinkles Cookie</h2>
                     <p class="description">Galleta hecha con cariño y amor</p>
                     <button class="btn">Comprar</button>
                 </div>
 
                 <div class="container container-galletas">
                     <img src="https://i.ibb.co/y0sp0qQ/corn-cookie-grid.png" alt="corn-cookie-grid" alt="Galleta de Chocolate" class="cookie-product">
-                    <h1 class="name">Corn Cookie🌽</h1>
+                    <h2 class="name">Corn Cookie🌽</h2>
                     <p class="description">Galleta hecha con cariño y amor</p>
                     <button class="btn">Comprar</button>
                 </div>
@@ -90,7 +93,7 @@
                 <div class="container container-galletas">
                     <img src="https://i.ibb.co/dQcpDMH/Cornflake-Cookie-grid.png" alt="Galleta de Chocolate"
                         class="cookie-product">
-                    <h1 class="name">CornFlakes Cookie</h1>
+                    <h2 class="name">CornFlakes Cookie</h2>
                     <p class="description">Galleta hecha con cariño y amor</p>
                     <button class="btn">Comprar</button>
                 </div>
@@ -98,7 +101,7 @@
                 <div class="container container-galletas">
                     <img src="https://i.ibb.co/MRx0ZRQ/09212020-PDP-OVERHAUL6032.webp"  alt="Galleta de Chocolate"
                         class="cookie-product">
-                    <h1 class="name">Cookie Pie</h1>
+                    <h2 class="name">Cookie Pie</h2>
                     <p class="description">Galleta hecha con cariño y amor</p>
                     <button class="btn">Comprar</button>
                 </div>
