--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description"
+        content="Deliciosas galletas hechas al estilo de los mejores sitios de Nueva York... pero con más amor">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <meta name="keywords" content="galletas, almeria, artesanales, postres, dulces">
     <link rel="stylesheet" href="./css/style.css">
-    <title>CookieShop</title>
+    <title>Inicio | Cookie Shop</title>
     <link rel="icon" type="image/x-icon" href="./recursosEntraga3/16508127701581534995.svg">
 </head>
 
@@ -49,22 +51,11 @@
         </nav>
     </header>
     <main>
-        <!-- Banner Principal -->
-        <!-- <div class="container text-center" id="banner-home">
-            <div class="row align-items-center banner-principal-flex">
-                <div class="col">
-                    <h1 class="texto-1 gradient-text">¿Por qué viajar a NY<br>si nuestras galletas<br>están aquí?</h1>
-                </div>
-                <div class="col">
-                    <img src="https://i.ibb.co/tq3ZVG2/Whats-App-Image-2023-02-22-at-7-41-33-PM.jpg" width="550px" alt="Cookie splash">
-                </div>
-            </div>
-        </div> -->
 
         <div class="banner-principal">
             <div class="right-banner-principal">
-                <h2>Nuestras Galletas están aquí (;</h2>
-                <h1 class="titulo-banner-principal">No viajes a New York</h1>
+                <h2>No viajes a <span class="seccion-1-texto-cursive">New York</span></h2>
+                <h2 class="titulo-banner-principal">Nuestras Galletas están aquí!</h2>
                 <h3>Envío gratis en Almería y 30% dcto. en toda España</h3>
                 <button class="button-principal">Ver todas las galletas</button>
             </div>
@@ -101,7 +92,7 @@
 
 
         <div class="seccion-1-texto">
-            <h1>Nuestras galletas son <span class="seccion-1-texto-cursive">artesanales.</span> </h1>
+            <h1 class="seccion-1-texto-titulo">Nuestras galletas son <span class="seccion-1-texto-cursive">artesanales.</span> </h1>
 
             <h2>Nos preocupamos de usar las mejores materias primas. Usamos sólo chocolate belga para todas nuestras
                 líneas de <span class="gradient-text-2">brownies y blondies, Belcolade y
@@ -147,7 +138,7 @@
                         <button>¡Quiero galletas!</button>
                         <a href="./secciones/galletas.html"></a>
                     </div>
-                    <div class="col cookie-con-lentes">
+                    <div class="col">
                         <img class="animate__animate__wobble cookie-con-lentes"
                             src="https://i.ibb.co/h7GFrKL/MART-excited-cookie-illustration-removebg-preview.png"
                             width="500px" alt="Cookie con lentes">
