--- a/sections/nosotros.html
+++ b/sections/nosotros.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="galleteria, panaderia, dulceria, cedric grolet, lavain">
+    <meta name="description" content="Somos galleteros desde que nacimos, por eso nos dedicamos a hacer galletas para ti">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="..//css/style.css">
-    <title>Nosotros</title>
+    <title>Nosotros | Cookie Shop</title>
+    <link rel="icon" type="image/x-icon" href="..//recursosEntraga3/16508127701581534995.svg">
 </head>
 
 <body>
@@ -41,6 +44,7 @@
             </div>
           </nav>
     </header>
+    <!-- Sección Nosotros -->
     <main>
         <section class="about-us">
           <div class="principal">
