--- a/sections/tiendas.html
+++ b/sections/tiendas.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Prueba nuestras galletas recién salidas del horno en nuestras tiendas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <meta name="keywords" content="galletas españa, galletas venezuela, galletas miami, galletas chile">    
     <link rel="stylesheet" href="..//css/style.css">
-    <title>Tiendas</title>
+    <title>Tiendas | Cookie Shop </title>
+    <link rel="icon" type="image/x-icon" href="..//recursosEntraga3/16508127701581534995.svg">
 </head>
 
 <body>
