arregle links en footer

--- a/sections/tiendas.html
+++ b/sections/tiendas.html
@@ -85,9 +85,9 @@
         <div class="col-xs-12 col-md-6 col-lg-3">
           <ul>
             <li><a href="..//index.html">Home</a></li>
-            <li><a href="..//secciones/galletas.html">Galletas </a></li>
-            <li><a href="..//secciones/tiendas.html">Tiendas</a></li>
-            <li><a href="..//secciones/nosotros.html">Nosotros</a></li>
+            <li><a href="..//sections/galletas.html">Galletas </a></li>
+            <li><a href="..//sections/tiendas.html">Tiendas</a></li>
+            <li><a href="..//sections/nosotros.html">Nosotros</a></li>
           </ul>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-3">
