--- a/sections/galletas.html
+++ b/sections/galletas.html
@@ -63,7 +63,7 @@
                         class="cookie-product">
                     <h2 class="name">Confetti Cookie</h2>
                     <p class="description">Galleta hecha con cariño y amor</p>
-                    <button id="btnjs1" class="btn">Comprar</button>
+                    <button id="boton1" data-id="1" class="btn">Comprar</button>
                 </div>
 
 
@@ -72,7 +72,7 @@
                         class="cookie-product">
                     <h2 class="name">Butternaut Cookie</h2>
                     <p class="description">Galleta hecha con cariño y amor</p>
-                    <button id="btnjs2" class="btn">Comprar</button>
+                    <button id="boton2" data-id="2" class="btn">Comprar</button>
                 </div>
 
 
@@ -80,7 +80,7 @@
                     <img src="https://i.ibb.co/wwnq8HV/cookie-brown-grid.png" alt="Galleta de Chocolate" class="cookie-product">
                     <h2 class="name">ChocoPrinkles Cookie</h2>
                     <p class="description">Galleta hecha con cariño y amor</p>
-                    <button id="btnjs3" class="btn">Comprar</button>
+                    <button id="boton3" data-id="3" class="btn">Comprar</button>
                 </div>
 
                 <div class="container container-galletas">
@@ -142,8 +142,8 @@
         </div>
 
     </footer>
-    <script src="../app.js"></script>
     <script src="..//producto.js"></script>
+    <script src="../app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
